feat(product): implement claim product use case
## ✨ What was done
- Implemented product claim flow
- Added domain rules to ensure product can be claimed
- Added authorization to validate collector permissions
- Exposed endpoint to claim a product

## 🔐 Business rules
- Only collectors can claim a product
- Product must be in PENDING status
- Creator cannot claim own product
- Product cannot be claimed twice

## 🧪 How to test
1. Authenticate as a COLLECTOR
2. Call POST /products/{id}/claim
3. Validate product status and claimedBy

## 📌 Notes
- Domain rules and authorization separated
- No breaking changes